fix: change to polish everything up

--- a/1stSemester/wip/lab3/zad1/Makefile
+++ b/1stSemester/wip/lab3/zad1/Makefile
@@ -4,10 +4,10 @@ main: main.o palindrom.o
 	clang -o main main.o palindrom.o
 
 main.o: main.c 
-	clang -c main.c
+	clang -Wextra -std=c11 --pedantic -c main.c
 
 palindrom.o: palindrom.c 
-	clang -c palindrom.c
+	clang -Wextra -std=c11 --pedantic -c palindrom.c
 
 clean:
 	rm -f main *.o *~
