feat: slow megamind solver

--- a/1stSemester/wip/lab4/zad2/Makefile
+++ b/1stSemester/wip/lab4/zad2/Makefile
@@ -4,10 +4,10 @@ main: main.o decode.o
 	clang -o main main.o decode.o -lm
 
 main.o: main.c
-	clang -Wextra -std=c11 --pedantic main.c
+	clang -Wextra -std=c11 --pedantic -c main.c
 
 decode.o: decode.c
-	clang -Wextra -std=c11 --pedantic decode.c
+	clang -Wextra -std=c11 --pedantic -c decode.c
 
 clean: 
 	rm -f main *.o *~
