akiso list 3 ex 5

--- a/3rdSemester/akiso/lab/list3/zad4/Makefile
+++ b/3rdSemester/akiso/lab/list3/zad4/Makefile
@@ -167,12 +167,15 @@ mkfs: mkfs.c fs.h
 # http://www.gnu.org/software/make/manual/html_node/Chained-Rules.html
 .PRECIOUS: %.o
 
+# added _expr for ex. 4 and _hello for ex.5
+
 UPROGS=\
 	_cat\
 	_echo\
 	_expr\
 	_forktest\
 	_grep\
+	_hello\
 	_init\
 	_kill\
 	_ln\
@@ -250,12 +253,12 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 # rename it to rev0 or rev1 or so on and then
 # check in that version.
 
-# added expr.c
+# added expr.c for ex. 4 and hello.c for ex. 5
 
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c\
-	printf.c umalloc.c expr.c\
+	printf.c umalloc.c expr.c hello.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
