changed ex 4 to work on gcc

--- a/3rdSemester/akiso/lab/list5/zad4/Makefile
+++ b/3rdSemester/akiso/lab/list5/zad4/Makefile
@@ -3,7 +3,7 @@ all: compile
 
 compile:
 	@nasm -f elf zad4.asm
-	@ld -m elf_i386 zad4.o -o zad4
+	@gcc -m32 -no-pie zad4.o -o zad4
 
 clean:
 	rm zad4 zad4.o
