--- a/4thSemester/aisd/lab/mw1/list2/ex3/Makefile
+++ b/4thSemester/aisd/lab/mw1/list2/ex3/Makefile
@@ -9,5 +9,9 @@ rand:
 merge:
 	$(CXX) $(CXX_WARN) mergesort.cpp -o mergesort.out
 
+mysort:
+	$(CXX) $(CXX_WARN) mysort.cpp -o mysort.out
+
+
 clean:
 	rm -f *.out
