alg list 4 ex 2

--- a/4thSemester/aisd/lab/mw1/list4/ex2/Makefile
+++ b/4thSemester/aisd/lab/mw1/list4/ex2/Makefile
@@ -1,8 +1,9 @@
 CXX := gcc
-CXX_WARN := -Wall -Wextra -Werror -Wsign-conversion -Wpedantic
+CXX_WARN := -Wall -Wextra -Werror -Wpedantic
+CXX_FLAGS := -O3
 
 bst:
-	$(CXX) $(CXX_WARN) main.c bst.c mtwister.c -o app.out
+	$(CXX) $(CXX_WARN) $(CXX_FLAGS) main.c bst.c mtwister.c -o app.out
 
 clean:
 	rm -f *.out
