alg list 5 ex 1 kruskal

--- a/4thSemester/aisd/lab/mw1/list5/ex1/Makefile
+++ b/4thSemester/aisd/lab/mw1/list5/ex1/Makefile
@@ -1,8 +1,11 @@
 CXX := gcc
 CXX_WARN := -Wall -Wextra -Werror -Wpedantic 
 
-bst:
-	$(CXX) $(CXX_WARN) main.c graph.c mtwister.c -o app.out
+prim:
+	$(CXX) $(CXX_WARN) prim.c graph.c mtwister.c -o prim.out
+
+kruskal:
+	$(CXX) $(CXX_WARN) kruskal.c graph.c mtwister.c -o kruskal.out
 
 clean:
 	rm -f *.out
