--- a/4thSemester/www/lab4/proxy/nginx.conf
+++ b/4thSemester/www/lab4/proxy/nginx.conf
@@ -5,9 +5,12 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
     sendfile        on;
     keepalive_timeout  65;
+
+    underscores_in_headers on;
+
+    proxy_pass_request_headers on;
 
     upstream backend {
         server wwwlab-backend:5000;
@@ -44,12 +47,31 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        location /api/ {
+        location ^~ /api/ {
             proxy_pass http://backend;
+
+            proxy_pass_request_headers on;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_set_header Authorization $http_x_auth_token;
+
+             # CORS headers
+            # add_header 'Access-Control-Allow-Origin' $cors_origin always;
+            # add_header 'Access-Control-Allow-Credentials' 'true' always;
+            # add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            # add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Auth-Token' always;
+
+
+            # Handle preflight
+            if ($request_method = OPTIONS ) {
+                add_header 'Content-Type' 'text/plain charset=UTF-8' always;
+                add_header 'Content-Length' 0 always;
+                return 204;
+            }
         }
+
     }
 }
