--- a/4thSemester/www/lab4/compose.dev.yaml
+++ b/4thSemester/www/lab4/compose.dev.yaml
@@ -30,15 +30,15 @@ services:
     network_mode: host
 
   # NodeJS (React) https://hub.docker.com/_/node
-  frontend:
-    container_name: wwwlab-frontend
-    image: node:23
-    restart: always
-    working_dir: /app
-    command: ["npm", "run", "dev", "--", "--host"]
-    volumes: 
-      - ./frontend:/app
-    network_mode: host
+  # frontend:
+  #   container_name: wwwlab-frontend
+  #   image: node:23
+  #   restart: always
+  #   working_dir: /app
+  #   command: ["npm", "run", "dev", "--", "--host"]
+  #   volumes: 
+  #     - ./frontend:/app
+  #   network_mode: host
 
   # Nginx https://hub.docker.com/_/nginx
   nginx:
