--- a/4thSemester/www/lab4/proxy/nginx.conf
+++ b/4thSemester/www/lab4/proxy/nginx.conf
@@ -39,13 +39,13 @@ http {
         # ssl_prefer_server_ciphers on;
         # ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location / {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        # location / {
+        #     proxy_pass http://frontend;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
         
         location ^~ /api/ {
             proxy_pass http://backend;
