--- a/5thSemester/kkd/lab/list2/Makefile
+++ b/5thSemester/kkd/lab/list2/Makefile
@@ -1,8 +1,8 @@
 CXX := gcc
-CXX_WARN := -Wall -Wextra -Werror -Wpedantic -Wno-format-truncation -fsanitize=undefined
+CXX_WARN := -Wall -Wextra -Werror -Wpedantic -Wno-format-truncation
 
-all: main.c arithmetic.c
-	$(CXX) $(CXX_WARN) main.c arithmetic.c
+all: main.c arithmetic.c entropy.c
+	$(CXX) $(CXX_WARN) main.c arithmetic.c entropy.c -lm
 
 clean:
 	rm -f *.out
