--- a/5thSemester/kkd/lab/list2/Makefile
+++ b/5thSemester/kkd/lab/list2/Makefile
@@ -5,4 +5,4 @@ all: main.c arithmetic.c entropy.c
 	$(CXX) $(CXX_WARN) main.c arithmetic.c entropy.c -lm
 
 clean:
-	rm -f *.out
+	rm -f *.out out*.test decoded*.test
