--- a/5thSemester/aod/lab/list4/ex2/Makefile
+++ b/5thSemester/aod/lab/list4/ex2/Makefile
@@ -15,7 +15,7 @@ all:
 
 .PHONY:app
 app:
-	$(CXX) $(CXX_FLAGS) ./src/*.cpp ./app/*.cpp -I./include -o ./app.out
+	$(CXX) $(CXX_FLAGS) ./src/*.cpp ./app/*.cpp -I./include -o ./matching.out
 
 .PHONY:test
 test:
